--- a/src/main/resources/assets/carbonized/lang/en_us.json
+++ b/src/main/resources/assets/carbonized/lang/en_us.json
@@ -19,5 +19,7 @@
   "enchantment.carbonized.potential": "Potential",
 
   "item.carbonized.netherite_horse_armor": "Netherite Horse Armor",
-  "item.carbonized.chainmail_horse_armor": "Chainmail Horse Armor"
+  "item.carbonized.chainmail_horse_armor": "Chainmail Horse Armor",
+
+  "block.carbonized.charcoal_block": "Block of Charcoal"
 }
